# qr-url-stats

./: .gitignore  Cargo.toml  Dockerfile  README.md  qr.db  qr.db-shm  qr.db-wal
.github/workflows/: build.yaml
migrations/: 20251209191934_create_links_table.sql  20251209195330_create_scans_table.sql  20251209202223_update_scans_timezone.sql  20251209202457_update_scans_timezone_cancun.sql  20251209203032_update_links_timezone_cancun.sql
src/: config.rs  main.rs  models.rs  utils.rs
src/handlers/: links.rs
