[package]
name = "qr-url-stats"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }
qrcode = "0.14"
serde = { version = "1", features = ["derive"] }
nanoid = "0.4"
chrono = { version = "0.4", features = ["serde"] } 
chrono-tz = "0.10"
url = "2.5"